--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 			<div class="card-inner">
 				<!-- Front of card -->
 				<div class="card-face card-front">
-					<img
-						src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?auto=format&fit=crop&q=80&w=2940"
-						alt="Premium headphones"
-					/>
+					<img src="./img/cardImg.jpg" />
 					<h2>Premium Headphones</h2>
 					<p>
 						Experience crystal clear sound with our premium wireless headphones.
@@ -27,53 +24,15 @@
 					<h2>Key Features</h2>
 					<ul class="features">
 						<li>
-							<svg
-								width="24"
-								height="24"
-								viewBox="0 0 24 24"
-								fill="none"
-								stroke="currentColor"
-								stroke-width="2"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path
-									d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"
-								/>
-							</svg>
+							<img src="./img/iconStar.svg" alt="Star" />
 							<span>40h Battery Life</span>
 						</li>
 						<li>
-							<svg
-								width="24"
-								height="24"
-								viewBox="0 0 24 24"
-								fill="none"
-								stroke="currentColor"
-								stroke-width="2"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z" />
-							</svg>
+							<img src="./img/iconFlash.svg" alt="Flash" />
 							<span>Active Noise Cancellation</span>
 						</li>
 						<li>
-							<svg
-								width="24"
-								height="24"
-								viewBox="0 0 24 24"
-								fill="none"
-								stroke="currentColor"
-								stroke-width="2"
-								stroke-linecap="round"
-								stroke-linejoin="round"
-							>
-								<path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-								<circle cx="9" cy="7" r="4"></circle>
-								<path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
-								<path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-							</svg>
+							<img src="./img/iconUser.svg" alt="User" />
 							<span>Multi-device Connection</span>
 						</li>
 					</ul>
